# Neljansuora

./: .coverage  .coveragerc  Maarittelydokumentti  README.md  maarittelydokumentti.md  pyproject.toml
Dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
Dokumentaatio/tuntikirjanpito/: loppupalautus.md  viikko2.md  viikko4.md  viikko5.md  viikko6.md
src/: indeksi.py  lauta.py  lautaa.py  maaritykset.py  neljansuora.py  testi.py
src/tests/: neljansuora_test.py
tuntikirjanpito/: viikko1  viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md
