[tool.poetry]
name = "tiha"
version = "0.1.0"
description = ""
authors = ["Tatu Sorjonen <tatu.sorjonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
